--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,8 @@
       "name": "Listen for XDebug",
       "type": "php",
       "request": "launch",
-      "port": 9000
+      "runtimeExecutable": "/usr/local/bin/php",
+      "port": 9001
     },
     {
       "name": "Launch currently open script",
@@ -16,7 +17,7 @@
       "request": "launch",
       "program": "${file}",
       "cwd": "${fileDirname}",
-      "port": 9000
+      "port": 9001
     }
   ]
 }
